Fix spacing

--- a/style.css
+++ b/style.css
@@ -78,14 +78,16 @@
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+    /* justify-content: space-between; */
 
-    /* position: absolute; */
+    position: absolute;
     right: 0;
     /* padding-right: -400; */
     /* right: 0px; */
-    min-width: 985px;
+    /* max-width: 600px; */
+    min-width: 720px;
     margin-top: 40px;
-    /* margin-left: 400px; */
+    margin-left: 520px;
 
     text-decoration: none;
 }
@@ -93,12 +95,12 @@
 .project_box {
     display: flex;
     flex-direction: column;
+    align-self: stretch;
     flex-wrap: wrap;
     right: 0px;
     justify-content: center;
-    align-items: flex-end;
+    align-items: space-between;
     padding: 0px;
-    width: 800px;
 
     flex: none;
     order: 0;
@@ -110,16 +112,8 @@
     height: 134px; object-fit: cover;
     float: right;
     bottom: 0;
-    margin-right: 12px;
+    margin-right: 24px;
 }
-
-/* .project_img {
-    width: 200px;
-    height: 134px;
-    object-fit: cover;
-    bottom: 0;
-    margin-right: 30px;
-} */
 
 .project_content {
     display: flex;
@@ -131,7 +125,6 @@
     align-self: stretch;
     flex-grow: 0;
     padding-bottom: 30px;
-    width: 800px;
     height: 194px;
 }
 
@@ -141,8 +134,6 @@
     align-items: flex-start;
     justify-content: flex-end;
     padding: 0px;
-
-    width: 669px;
     height: 114px;
 }
 
@@ -168,8 +159,8 @@
 .project_line {
     border: 1px solid #000000;
     flex: none;
-    /* align-self: stretch; */
-    width: 1400px;
+    align-self: stretch;
+    /* width: 800px; */
     align-content: flex-start;
     justify-content: flex-start;
     flex-grow: 0;
@@ -193,8 +184,8 @@
     position: absolute;
     left: 600px;
     bottom: -2px;
-    width: 800px;
-    height: 1000px;
+    width: 600px;
+    height: 800px;
 
     background: #B776EA;
     filter: blur(400px);
